# labwc-fuzzel-sfwbar

./: .gitignore  README.md  TODOS.md  build-ocws-audio.sh  build-wayland.sh  build.zig  compose-fixes.sh  download-labwc.sh  install-distribution.sh  install.sh  test-rendering.sh  test-sfwbar.config
.mimocode/: .cron-lock
components/: README.md
contracts/: variables.ini
distro/: arch.sh  debian-sparky-lxqt.sh  debian.sh  fedora.sh
docs/: PLAN-sfwbar-unification.md  configuration.md  events.md  getting-started.md
dotfiles/: README.md  install.sh  wallpaper
scripts/: actions.sh  backup.sh  clean.sh  diagnostics.sh  dotfiles-sync.sh  download-themes.sh  enforce-git-depth.sh  fix.sh  font-scale.sh  increase-decrease-brightness.sh  install-deps.sh  keybind-presets.sh  keybinds.sh  labwc-shell-wrapper  ocws-apps-with-dnf.sh  ocws-apps-with-flatpak.sh  ocws-apps-with-homebrew.sh  ocws-configure.sh  ocws-deps.sh  ocws-display.sh  ocws-emit.sh  ocws-eq-apply  ocws-fetch-art.sh  ocws-health.sh  ocws-icon-downloader.sh  ocws-icon-picker.sh  ocws-media-art.sh  ocws-media-widget-updater.sh  ocws-state.sh  ocws-validate.sh  quick.sh  reconfigure.sh  relaunch-status-bars.sh  reset.sh  restore.sh  setup-sfwbar.sh  setup.sh  sfwbar-watchdog.sh  shell-mode-picker.sh  (+18 more)
src/shells/zigshell-blend2d/: CMakeLists.txt  build.zig
src/shells/zigshell-blend2d/src/: blend2d_render.c  blend2d_render.h  blend2d_render.zig  blend2d_render_test.zig  c.zig  dock.c  dock.zig  dock_c.h  dock_c_impl.c  icon.c  icon.zig  main_shell.zig  panel.zig  panel_config.zig  panel_test.zig
(+306 files in other folders)
